<resources>
    <string name="app_name">Yelp</string>
    <string name="search_title">Business Search</string>
    <string name="distance">Distance</string>
    <string name="keyword">Keyword
        <font color='#FF0000'>*</font>
    </string>
    <string name="location">Location
        <font color='#FF0000'>*</font>
    </string>
    <string name="location_checkbox_label">Auto-detect my location</string>
    <string name="category">
        <font color="#E814FF">Category</font>
        <font color='#FF0000'>*</font>
    </string>
    <string name="submit_button_label">Submit</string>
    <string name="clear_button_label">Clear</string>
    <string name="results_label">Results</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="business_detail_tab">Business Details</string>
    <string name="map_tab">Map Location</string>
    <string name="review_tab">Reviews</string>

    <string name="reserve_button">RESERVE NOW</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_key">AIzaSyB62MJng6BeBEZebU-gnM11laySMeap9mE</string>
    <string name="no_results_found">No Results Found</string>
</resources>