<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent">
            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="@color/white"
                    android:background="@color/purple_200"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp"/>

            <ImageButton
                    android:id="@+id/reservation_icon"
                    android:background="?android:selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/toolbar"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginHorizontal="5dp"
                    app:srcCompat="@drawable/reservation"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" android:id="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <TextView
                android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/search_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                android:textSize="30sp" android:textStyle="bold"/>

<!--        <EditText
                android:id="@+id/keyword_input"
                android:layout_width="230dp"
                android:layout_height="48dp"
                android:hint="@string/keyword" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="0dp"
                android:layout_marginStart="16dp"
                android:inputType="text"/>-->

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/keyword_input"
                android:hint="@string/keyword"
                android:layout_width="230dp"
                android:layout_height="48dp"
                android:completionThreshold="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="0dp"
                android:layout_marginStart="16dp"
                android:ems="10"/>

        <EditText
                android:id="@+id/distance_input"
                android:layout_width="230dp"
                android:layout_height="48dp"
                android:hint="@string/distance" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp"
                android:inputType="number"/>
        <TextView
                android:id="@+id/category_label"
                android:layout_width="180dp"
                android:layout_height="20dp"
                android:text="@string/category" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"/>

        <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_label" android:entries="@array/spinnerCategories"/>

        <EditText
                android:id="@+id/location_input"
                android:layout_width="230dp"
                android:layout_height="48dp"
                android:hint="@string/location" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp" android:inputType="text"/>


        <CheckBox android:id="@+id/location_checkbox" android:layout_width="200dp"
                  android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/location_input" android:layout_marginTop="16dp"
                  android:layout_marginStart="16dp" android:buttonTint="#E814FF"
                  android:text="@string/location_checkbox_label"/>


        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                        android:orientation="horizontal">

            <Button
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="65dp"
                    android:layout_marginTop="9dp"

                    android:text="@string/submit_button_label" android:backgroundTint="#F44336"/>
            <Button
                    android:id="@+id/clear_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="240dp"
                    android:layout_marginTop="9dp"

                    android:text="@string/clear_button_label" android:backgroundTint="#F44336"/>
        </RelativeLayout>


    </LinearLayout>
    <TextView
            android:id="@+id/result_label" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/results_label" app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="30sp" android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:layout_marginTop="12dp" android:layout_marginStart="16dp"/>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/result_label"
                    android:layout_marginTop="16dp" android:id="@+id/relativeLayout">

        <TextView
                android:id="@+id/empty_view"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:gravity="center"
                  android:visibility="gone"
                  android:text="@string/no_results_found"
                android:textStyle="bold"
        android:textColor="@color/purple_200"/>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view">

        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>