<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/appBarLayoutDetail">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/DetailToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="@color/white"
                    android:background="@color/purple_200"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
            />


            <TextView
                android:id="@+id/business_name_detail"
                android:layout_width="270dp"
                android:layout_height="29dp"
                android:layout_marginStart="48dp"
                android:text="Quarter Sheets Pizza Club"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/DetailToolbar"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.518" />

            <ImageView
                    android:id="@+id/facebook_icon"
                    android:layout_width="32dp"
                    android:layout_height="26dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/DetailToolbar"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginHorizontal="5dp"
                    android:src="@drawable/facebook"
                    android:layout_marginEnd="50dp"
                    app:layout_constraintVertical_bias="0.466"/>
            <ImageButton
                    android:background="?android:selectableItemBackground"
                    android:id="@+id/twitter_icon"
                    android:layout_width="28dp"
                    android:layout_height="27dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/DetailToolbar"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/twitter"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            android:layout_height="85dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayoutDetail">

        <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business_detail_tab"/>

        <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map_tab"/>

        <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review_tab"
        />
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" tools:ignore="SpeakableTextPresentCheck"/>

</androidx.constraintlayout.widget.ConstraintLayout>